--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,28 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <h1 class="title">東京ケバブマップ</h1>
+      <% if user_signed_in? %>
+        <div class="header__link">
+          <span>
+            <ul class="user_info">
+              <li>
+                <%= link_to "マイページ", "/users/#{current_user.id}" %>
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                <%= link_to  "投稿する", "/tweets/new", class: "post" %>
+              </li>
+            </ul>
+          </span>
+          
+          </div>
+      <% else %>
+        <div class="header__link">
+          <%= link_to "ログイン", new_user_session_path, class: 'post' %>
+          <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
+        </div>
+      <% end %>
+    </header>
+        <%= yield %>
   </body>
 </html>
