管理機能の実装　完了

--- a/app/assets/stylesheets/maps/index.scss
+++ b/app/assets/stylesheets/maps/index.scss
@@ -10,10 +10,13 @@ header{
   display: flex;
   justify-content: space-between;
   .title{
-    color: white;
     line-height: 100px;
     font-size: 50px;
     margin-left: 30px;
+    .header__title--text{
+      text-decoration: none;
+      color: white;
+    }
   }
   .header__link{
     line-height: 100px;
