フロント　詳細　未完成

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,8 +1,9 @@
- <div class="contents">
+<div class="contents">
   <div class="name">
     <%= @place.name %>
   </div>
-  <div class="review">
-    <%= @place.review %>
+  <div class="main">
+    <div class="main__left", id="image"></div>
+    <div class="main__right", id="menu"></div>
   </div>
 </div>
