--- a/app/assets/stylesheets/places/show.scss
+++ b/app/assets/stylesheets/places/show.scss
@@ -2,16 +2,28 @@
   height: auto;
   margin: 100px 200px 200px;
   .name{
-    height: 30px;
+    height: 100px;
     width: 300px;
+    font-size: 40px;
     text-align: center;
-    line-height: 30px;
+    line-height: 100px;
     margin: auto;
   }
-  .review{
-    border-style: solid;
-    height: 200px;
-    width: 400px;
-    margin: 50px auto;
+  .main{
+    height: auto;
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    &__left{
+      height: 100px;
+      width: 45%;
+      background-color: red;
+    }
+    &__right{
+      height: 100px;
+      width: 45%;
+      background-color: blue;
+    }
   }
+  
 }
