テーブルの完成　ビューの表示OK

--- a/app/assets/stylesheets/places/show.scss
+++ b/app/assets/stylesheets/places/show.scss
@@ -22,7 +22,11 @@
     &__right{
       height: 100px;
       width: 45%;
-      background-color: blue;
+      text-align: center;
+      font-size: 20px;
+      &--name{
+        text-align: center;
+      }
     }
   }
   
