--- a/app/assets/stylesheets/maps/index.scss
+++ b/app/assets/stylesheets/maps/index.scss
@@ -1,7 +1,8 @@
+
 body{
   height: 100%;
+  background-color: red;
 }
-
 header{
   height: 100px;
   width: 100%;
@@ -31,7 +32,6 @@ header{
   display: flex;
   &__side{
     width: 200px;
-    
   }
   &__map{
     width: calc(100vw - 200px);
