--- a/app/assets/stylesheets/places/show.scss
+++ b/app/assets/stylesheets/places/show.scss
@@ -1,33 +1,58 @@
-.contents{
-  height: auto;
-  margin: 100px 200px 200px;
-  .name{
-    height: 100px;
-    width: 300px;
-    font-size: 40px;
-    text-align: center;
-    line-height: 100px;
-    margin: auto;
-  }
-  .main{
-    height: auto;
-    width: auto;
-    display: flex;
-    justify-content: space-between;
-    &__left{
-      height: 100px;
-      width: 45%;
-      background-color: red;
-    }
-    &__right{
-      height: 100px;
-      width: 45%;
-      text-align: center;
-      font-size: 20px;
-      &--name{
-        text-align: center;
-      }
-    }
-  }
+.main{
+   height: calc(100vh - 200px);
+  .contents{
+    height: 400px;
+    width: 34%;
+    margin-right: 33%;
+    margin-left: 33%;
+    margin-top: 50px;
   
+    background-color: white;
+    overflow: scroll;
+    .name{
+      height: 100px;
+      font-size: 30px;
+      text-align: center;
+      line-height: 100px;
+      margin: auto;
+    }
+    .details{
+      height: auto;
+      width: auto;
+      display: flex;
+      justify-content: space-between;
+      &__left{
+        &--bigimg{
+          height: 200px;
+          width: 200px;
+          margin-left: 50px;
+        }
+        &--phots{
+          display: flex;
+          margin-left: 50px;
+          padding: 0;
+          list-style-type: none;
+          .thumb{
+            height: 20px;
+            width: 20px;
+            flex: 1 1 auto;
+            margin-right: 8px;
+          }
+        }
+      
+      }
+      &__right{
+        margin-right: 50px;
+        &--table{
+          text-align: center;
+          font-size: 20px;
+          &-name{
+            text-align: center;
+          }
+        }
+      }
+      
+    }
+    
+  }
 }
