--- a/app/assets/stylesheets/places/show.scss
+++ b/app/assets/stylesheets/places/show.scss
@@ -1,4 +1,5 @@
 .contents{
+  background-color: #aaa;
   height: auto;
   margin: 100px 200px 200px;
   .name{
@@ -15,17 +16,36 @@
     display: flex;
     justify-content: space-between;
     &__left{
-      height: 100px;
+      margin-left: 20px;
       width: 45%;
-      background-color: red;
+      &--bigimg {
+        width: 200px;
+        height: 200px;
+        margin: auto;
+      }
+      &__list {
+        display: flex;
+        &--image {
+          width: 20%;
+          height: 20%;
+        }
+      }
     }
-    &__right{
-      height: 100px;
+    &__right {
+      &__menu {
+        text-align: center;
+        font-size: 30px;
+      }
+      margin-right: 20px;
       width: 45%;
       text-align: center;
-      font-size: 20px;
-      &--name{
-        text-align: center;
+      &__table {
+        width: 100%;
+        margin-top: 20px;
+        font-size: 20px;
+        &--name{
+          text-align: center;
+        }
       }
     }
   }
