--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1 class="title">
-        <%= link_to "東京ケバブマップ", root_path, class: "header__title--text"%>
+        <%= link_to "ケバブマップ", root_path, class: "header__title--text"%>
       </h1>
       <% if user_signed_in? %>
         <div class="header__link">
