--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -49,4 +49,6 @@
   </div>
 </div>
 <footer></footer>
-
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvf0vzr9bo7k50zErqUl0M44uu7jD-bmI&callback=initMap">
+</script>
