--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -50,5 +50,5 @@
 </div>
 <footer></footer>
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvf0vzr9bo7k50zErqUl0M44uu7jD-bmI&callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvf0vzr9bo7k50zErqUl0M44uu7jD-bmI&callback=initMap" type="text/javascript">
 </script>
