マップ　ビューの変更

--- a/app/assets/stylesheets/maps/index.scss
+++ b/app/assets/stylesheets/maps/index.scss
@@ -28,13 +28,9 @@ header{
 .main{
   height: calc(100vh - 200px);
   width: 100%;
-  display: flex;
-  &__side{
-    width: 200px;
-    background-color: #1aaedb;
-  }
+ 
   &__map{
-    width: calc(100vw - 200px);
+    width: 100vw;
   }
 }
 footer{
